--- a/index2.html
+++ b/index2.html
@@ -3,13 +3,93 @@
 <head>
 	<title>CSS Grids</title>
 	<style type="text/css">
+
+		*{
+			margin:0;
+			padding: 0;
+		}
+
+		.wrapper{
+			display: grid;
+			grid-template-columns: repeat(3 , 1fr );
+			grid-auto-rows: minmax(100px, auto);
+		}
+
+		.wrapper > div {
+         background: #eee;
+		 padding: 1em;
+		}
+
+		.wrapper > div:nth-child(odd){
+		background:#ddd;
+		}
+
+
+		.nested{
+			display: grid;
+			grid-template-columns: repeat(3 , 1fr );
+			grid-auto-rows: 20px;
+			grid-gap: 1em;
+			padding: 1em;
+		}
+
+		.nested > div {
+			border: #333 1px solid;
+		}
 	
 	</style>
 </head>
 <body>
-
 	<div class="wrapper">
 
+		<div>
+			Lorem insum dolor sit.
+		</div>
+
+		<div>
+			Lorem insum dolor sit.
+			If you're looking for random paragraphs, you've come to the right place. When a random word or a random sentence isn't quite enough, the next logical step is to find a random paragraph. We created the Random Paragraph Generator with you in mind. The process is quite simple. Choose the number of random paragraphs you'd like to see and click the button. Your chosen number of paragraphs will instantly appear.
+		</div>
+
+		<div class="nested">
+			
+			<div>lorem</div>
+			<div>lorem</div>
+			<div>lorem</div>
+
+			<div>lorem</div>
+			<div>lorem</div>
+			<div>lorem</div>
+
+			<div>lorem</div>
+			<div>lorem</div>
+			<div>lorem</div>
+
+			<div>lorem</div>
+			<div>lorem</div>
+			<div>lorem</div>	
+
+		</div>
+
+		<div>
+			Lorem insum dolor sit.
+		</div>
+
+		<div>
+			Lorem insum dolor sit.
+		</div>
+
+		<div>
+			Lorem insum dolor sit.
+		</div>
+
+		<div>
+			Lorem insum dolor sit.
+		</div>
+
+		<div>
+			Lorem insum dolor sit.
+		</div>
 
 	</div>
 
